fix: scrollbar at bottom

--- a/src/components/controls/layers-controller/layers-controller.scss
+++ b/src/components/controls/layers-controller/layers-controller.scss
@@ -7,7 +7,7 @@
   max-height: 400px;
   overflow: auto;
   display: flex;
-  flex-flow: column-reverse;
+  flex-flow: column;
   align-items: flex-start;
   background: rgba(0, 0, 0, 0.5);
   color: #eee;
